crates/typechecker/tests/snapshots/fixture_test__own_if_mixed_join.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall a. fn(a, a) -> Bool
lt: forall a. fn(a, a) -> Bool
combine: forall a. fn(a, a) -> a
sub: forall a. fn(a, a) -> a
mul: forall a. fn(a, a) -> a
div: forall a. fn(a, a) -> a
neg: forall a. fn(a) -> a
show: forall a. fn(a) -> String
hash: forall a. fn(a) -> Int
close: forall a. fn(~a) -> Unit
peek: forall a. fn(a) -> a
last: forall a. fn(List[a]) -> Option[a]
sort_by: forall b a. fn(List[a], fn(a) -> b) -> List[a]
filter: forall a. fn(List[a], fn(a) -> Bool) -> List[a]
fold: forall a b. fn(List[a], b, fn(b, a) -> b) -> b
map: forall a b. fn(List[a], fn(a) -> b) -> List[b]
to_list: forall a. fn(Vec[a]) -> List[a]
println: forall a. fn(a) -> Unit
Some: forall a. fn(a) -> Option[a]
None: forall a. Option[a]
Ok: forall a b. fn(b) -> Result[a, b]
Err: forall a b. fn(a) -> Result[a, b]
Cons: forall a. fn(a, List[a]) -> List[a]
Nil: forall a. List[a]
LT: Ordering
EQ: Ordering
GT: Ordering
test: fn(~String, String) -> String
